@@ -12,6 +12,7 @@ Changes in PixelLight 1.0.0-R1 (released on August 19, 2012)
 - Feature: Added plugins for volume rendering
 - Change: Moved out-of-date "PLScene::SNSky" and "PLScene::SNTerrain" into the new plugin project "PLNature" ("PLNature::SNSky", "PLNature::SNTerrain")
 - Change: Moved "PLPhysics::SNMPhysicsBodyTerrain" into "PLNature::SNMPhysicsBodyTerrain"
+- Change: Updated from "Cg Toolkit 3.1 - February 2012" to "Cg Toolkit 3.1 - April 2012"
 - Bugfix (ID: 3502066): "PLGraphics::Color4::IsValid()" alpha-check was invalid
 - Bugfix (ID: 3512436): "pl_implement_class(Keyboard)" was missing within "PLInput"
 - Bugfix (ID: 3514155): The ingame console was processing input events received while the main window had no focus
